# zkboo

./: .gitignore  README  proof-size
aes/: README  define.h  prover.c  shared.h  verifier.c  zklib.h
hmac/: CMakeLists.txt  define.h  prover.c  shared.h  verifier.c
hmac_verf/: Makefile  aes.h  define.h  prover.c  prover.c.new  shared.h  verifier.c  zklib.h
sha2/: aes.h  define.h  prover.c  shared.h  verifier.c  zklib.h
sha2_unpadded/: CMakeLists.txt  define.h  prover.c  shared.h  verifier.c
utils/: aes_test.py  hmac_test.py  sha2_test.py
